--- a/install.txt
+++ b/install.txt
@@ -1,11 +1,12 @@
-##################################################################
-#                                                                #
-#     MechSys - Instructions for installation for developers     #
-#                                                                #
-##################################################################
+#####################################################################
+#                                                                   #
+#        MechSys -- Installation instructions for developers        #
+#           David Oliveira, Dorival Pedroso, Raul Durand            #
+#                           August, 2008                            #
+#                                                                   #
+#####################################################################
 
-
-1) CMake 2.6 (www.cmake.org)    ##################################
+#  1) CMake 2.6 (www.cmake.org)    ##################################
 
 ~/pkg $              sudo apt-get install libncurses5-dev
 ~/pkg $              tar xzvf cmake-2.6.1.tar.gz
@@ -14,8 +15,7 @@
 ~/pkg/cmake-2.6.1 $  make
 ~/pkg/cmake-2.6.1 $  sudo make install
 
-
-2) IGraph (http://cneurocvs.rmki.kfki.hu/igraph)    ##############
+#  2) IGraph (http://cneurocvs.rmki.kfki.hu/igraph)    ##############
 
 ~/pkg $             tar xzvf igraph-0.5.tar.gz
 ~/pkg $             cd igraph-0.5
@@ -23,31 +23,23 @@
 ~/pkg/igraph-0.5 $  make
 ~/pkg/igraph-0.5 $  sudo make install
 
-
-3) Dependencies (Ubuntu 8.04)    #################################
+#  3) Dependencies (Ubuntu 8.04)    #################################
 
 ~/mechsys $  sh ubuntu_deps.sh
 
 Will install:  g++ make gfortran libblitz0-dev libsuitesparse-dev
                libgsl0-dev libboost-python-dev libsuperlu3-dev
 
+#  4) Compilation, tests, and installation    #######################
 
-4) Python module    ##############################################
+~/mechsys $  ccmake .                                  [c] [c] [g]
+~/mechsys $  make
+~/mechsys $  make test
+~/mechsys $  sudo make install
 
-~/mechsys/src $  sudo python setup_mechsys.py install
-
-
-5) Tests    ######################################################
-
-~/mechsys $      ccmake .                              [c] [c] [g]
-~/mechsys $      make
-~/mechsys/tst $  sh check_all.sh
-
-
-6) Blender    ####################################################
+#  5) Blender    ####################################################
 
 ~/mechsys $  sudo apt-get install blender
 ~/mechsys $  sh ubuntu_blender_links.sh
 
-
-##################################################################
+#####################################################################
