Debian package generation is working (vesioning does not work for update manager in Ubuntu)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-mechsys (1.0) stable; urgency=low
+mechsys (1.0-1) unstable; urgency=low
 
   * Initial Release.
 
- -- Dorival Pedroso <dorival.pedroso@gmail.com>  Thu, 04 Sep 2008 22:16:59 +1000
+ -- Dorival Pedroso <dorival.pedroso@gmail.com>  Sun, 07 Sep 2008 16:11:06 +1000
