--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+mechsys (1.3-1) unstable; urgency=low
+
+  * Blender GUI improved a lot
+  * Blender GUI: Now all properties are stored in the same (geometry) object
+  * Blender GUI: Generation of o2 elements added
+  * Blender GUI: Results/Report added
+  * Blender GUI: Drawing of Moment, Axial, and Shear forces for Beams added
+  * Reinforcements (embedded) added
+  * Biot/coupled elment added
+
+ -- Dorival Pedroso <dorival.pedroso@gmail.com>  Sun, 07 Dec 2008 20:31:12 +1000
+
 mechsys (1.2-1) unstable; urgency=low
 
   * Blender GUI improved: Blocks can now be defined in a single mesh
